fix extra margin in post component

--- a/src/assets/scss/components/post.scss
+++ b/src/assets/scss/components/post.scss
@@ -60,7 +60,7 @@
         font-size: 15px;
         color: #71728c;
         line-height: 24px;
-        margin: 20px 0;
+        margin: 10px 0 20px 0;
 
         @media (max-width: 576px) {
           ul,
